20220825
- Fix #1142 and #1152: Fanbox Service Provider error.
- Update #814: support to import full cookies string.
- Merge fix ugoira generation using ffmpeg.exe Windows path for all distribution (#1145) by @Toyem
  - need to update `config.ini` in `[FFmpeg]` section if you have parameter error when encoding to gif.
    `gifParam = -filter_complex [0:v]split[a][b];[a]palettegen=stats_mode=diff[p];[b][p]paletteuse=dither=bayer:bayer_scale=5:diff_mode=rectangle`
- Fix #1146: update lxml with html5lib.
- Merge Add date option to ranking download (#1149) by @Toyem

20220804
- Merge fix reencoding backup of files to follow ugoira config (#1131) by @Toyem.
- Implement #1133: enhance content_provider.json to support urlEmbed.
- Merge Add a separator in temp folder cmd for windows (fix #1132) (#1135) by @Toyem.
- Merge fix ugoira generation and reencoding for all distribution for issue #1132 (#1136) by @Toyem.
- Merge Fix for #1138 (#1139) by @NHOrus.
- Merge Fixes Byte Order Mark in Downloaded file list, again. (#1137) by @NHOrus.
- and other minor changes.

20220701
- Merge Update WriteXMP feature to use pyexiv2 only (#1043) by @Baa.
- Merge Adds feature to strip HTML from captions (#1045) by @Baa.
- Fix #1047: fix "ffmpegExt" config.
- Fix #1019: add 404 handling for pixiv sketch
- Merge Some optimizations (#1052) by @amatuerCoder.
- Implement #1064: add parser for titleCaptionTranslation.
  - Add new filename format %translated_title% for translated title if exists, else it will use original title.
- Implement #1068: add content type filter.
- Merge Fix #1072, #1065 (running in pipe on Unix) (#1082) by @dragontamer8740.
- Fix #1084: Fanbox download removes Pixiv files with same ID.
- Implement #1087: FANBOX's url_embed not detected.
- Update logging for #1090: premature download by tags.
- Merge Pixiv Sketch config and Database Manager changes (#1078) by @cglmrfreeman.
- Fix #1094: Fanbox f1/f2 download issue.
- Fix #1095: Fanbox Post missing files to download.